Initial update push
All update work done so far

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,5 @@
 {
-	"plugins": ["react-hot-loader/babel","@babel/plugin-proposal-class-properties","@babel/plugin-transform-react-jsx"],
-	/* 
+	"plugins": ["react-hot-loader/babel","@babel/plugin-proposal-class-properties","@babel/plugin-transform-react-jsx"], 
 	"presets":[
 		[
 			"@babel/env", 
@@ -11,8 +10,7 @@
 			}
 		], 
 		"@babel/preset-react",
-		//"flow"
-	], 
-	*/
+		"@babel/preset-flow"
+	] 
 	
 }
