--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
 			"target": "nsis"
 		},
 		"nsis": {
-			"oneClick":false,
-			"perMachine":false, 
-			"allowToChangeInstallationDirectory":true
-
+			"oneClick": false,
+			"perMachine": false,
+			"allowToChangeInstallationDirectory": true
 		}
 	},
 	"scripts": {
@@ -38,31 +37,39 @@
 		"@babel/core": "^7.4.3",
 		"@babel/plugin-proposal-class-properties": "^7.4.0",
 		"@babel/preset-env": "^7.3.1",
+		"@babel/preset-flow": "^7.21.4",
 		"@babel/preset-react": "^7.0.0",
 		"@babel/register": "^7.4.0",
 		"@fortawesome/fontawesome-free": "^5.8.1",
-		"awesome-typescript-loader": "^5.2.1",
+		"@types/lodash.merge": "^4.6.7",
 		"babel": "^6.23.0",
-		"babel-cli": "^6.26.0",
-		"babel-loader": "^8.0.5",
-		"babel-preset-flow": "^6.23.0",
-		"cross-env": "^5.2.0",
-		"css-loader": "^2.1.0",
+		"babel-loader": "^9.1.2",
+		"bufferutil": "^4.0.7",
+		"cross-env": "^7.0.3",
+		"css-loader": "^6.7.3",
 		"electron": "^4.0.4",
 		"electron-builder": "^20.41.0",
 		"electron-devtools-installer": "^2.2.4",
+		"encoding": "^0.1.13",
 		"font-awesome-loader": "^1.0.2",
 		"foreman": "^3.0.1",
+		"playwright": "^1.32.3",
+		"playwright-core": "^1.32.3",
+		"playwright-extra": "^4.3.6",
 		"react-hot-loader": "^4.7.0",
-		"sass-loader": "^7.1.0",
-		"source-map-loader": "^0.2.4",
+		"sass-loader": "^13.2.2",
+		"source-map-loader": "^4.0.1",
 		"style-loader": "^0.23.1",
-		"typescript": "^3.4.2",
-		"webpack": "^4.29.5",
-		"webpack-cli": "^3.2.3",
-		"webpack-dev-server": "^3.1.14"
+		"ts-loader": "^9.4.2",
+		"typescript": "^5.0.4",
+		"utf-8-validate": "^6.0.3",
+		"webpack": "^5.79.0",
+		"webpack-cli": "^5.0.1",
+		"webpack-dev-server": "^3.1.14",
+		"webpack-subresource-integrity": "^1.5.2"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.3",
 		"@types/debug": "^4.1.3",
 		"@types/download": "^6.2.4",
 		"@types/electron": "^1.6.10",
@@ -74,9 +81,12 @@
 		"@types/react-jsonschema-form": "^1.3.2",
 		"@types/react-redux": "^7.0.9",
 		"@types/react-router-dom": "^4.3.1",
+		"@types/ws": "^8.5.4",
 		"@types/yauzl": "^2.9.1",
 		"babel-core": "^6.26.3",
 		"bootstrap": "^4.3.1",
+		"cheerio": "^1.0.0-rc.12",
+		"clone-deep": "^4.0.1",
 		"concurrently": "^4.1.0",
 		"download": "^7.1.0",
 		"electron-dl": "^1.13.0",
@@ -85,10 +95,14 @@
 		"h2m": "^0.7.0",
 		"immutability-helper": "^3.0.0",
 		"jquery": "^3.4.0",
-		"lodash": "^4.17.11",
-		"node-sass": "^4.11.0",
+		"lodash": "^4.17.21",
+		"lodash.merge": "^4.6.2",
+		"merge-deep": "^3.0.3",
 		"open-iconic": "^1.1.1",
 		"popper.js": "^1.15.0",
+		"puppeteer": "^19.8.5",
+		"puppeteer-core": "^19.8.5",
+		"puppeteer-extra": "^3.3.6",
 		"rage-edit": "^1.2.0",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.2",
@@ -100,7 +114,14 @@
 		"react-redux": "^7.0.3",
 		"react-router-dom": "^4.3.1",
 		"redux": "^4.0.1",
+		"redux-devtools": "^3.7.0",
+		"redux-devtools-extension": "^2.13.9",
+		"redux-thunk": "^2.4.2",
+		"sass": "^1.49.9",
 		"sc2mapster-crawler": "git+https://github.com/SC2Mapster/sc2mapster-crawler.git",
+		"thunk": "^0.0.1",
+		"update-electron-app": "^1.4.2",
+		"ws": "^8.13.0",
 		"yarn": "^1.13.0",
 		"yauzl": "^2.10.0"
 	}
